syntax = "proto3";

package pb;

option go_package = "github.com/lushenle/simple-cache/pkg/pb";

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool success = 1;
  bool existed = 2;
}